[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
]

[project]
name = "django-tos"
description = "django-tos is a reusable Django application for setting Terms of Service."
readme = "README.rst"
license = {text = "BSD-3-Clause"}
authors = [{name = "Frank Wiles", email = "frank@revsys.com"}]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = [
  "version",
]
dependencies = [
  "coverage==5.2.1",
  "Django==2.2.28",
]
[project.urls]
Homepage = "http://github.com/revsys/django-tos/tree/master"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "tos.VERSION"}

[tool.setuptools.packages]
find = {namespaces = false}
